--- a/GUI/MainWindow.ui
+++ b/GUI/MainWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>390</width>
-    <height>293</height>
+    <height>373</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,19 +26,6 @@
     <property name="title">
      <string>Simulation</string>
     </property>
-    <widget class="QProgressBar" name="progressBar">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>70</y>
-       <width>361</width>
-       <height>23</height>
-      </rect>
-     </property>
-     <property name="value">
-      <number>24</number>
-     </property>
-    </widget>
     <widget class="QPushButton" name="nextFrame_button">
      <property name="geometry">
       <rect>
@@ -91,12 +78,25 @@
       <string>Stop</string>
      </property>
     </widget>
+    <widget class="QSlider" name="animationMovement_horizontalSlider">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>70</y>
+       <width>361</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>110</y>
+      <y>120</y>
       <width>391</width>
       <height>201</height>
      </rect>
@@ -200,6 +200,45 @@
      </property>
      <property name="text">
       <string>Header File</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="binaryFiles_checkBox">
+     <property name="geometry">
+      <rect>
+       <x>260</x>
+       <y>120</y>
+       <width>121</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Binary Files</string>
+     </property>
+    </widget>
+    <widget class="QProgressBar" name="loadingFiles_progressBar">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>170</y>
+       <width>371</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="value">
+      <number>0</number>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>150</y>
+       <width>101</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Loading Files:</string>
      </property>
     </widget>
    </widget>
