--- a/GUI/WarningWindow.ui
+++ b/GUI/WarningWindow.ui
@@ -37,6 +37,9 @@
         <property name="text">
          <string/>
         </property>
+        <property name="wordWrap">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
      </layout>
