--- a/GUI/MainWindow.ui
+++ b/GUI/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>390</width>
-    <height>373</height>
+    <width>386</width>
+    <height>452</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,10 +17,10 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>0</x>
+      <x>3</x>
       <y>10</y>
       <width>381</width>
-      <height>111</height>
+      <height>191</height>
      </rect>
     </property>
     <property name="title">
@@ -82,7 +82,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>70</y>
+       <y>60</y>
        <width>361</width>
        <height>29</height>
       </rect>
@@ -91,13 +91,55 @@
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
+    <widget class="QSpinBox" name="averaging_spinBox">
+     <property name="geometry">
+      <rect>
+       <x>320</x>
+       <y>90</y>
+       <width>55</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="minimum">
+      <number>1</number>
+     </property>
+     <property name="maximum">
+      <number>50</number>
+     </property>
+    </widget>
+    <widget class="QLabel" name="average_label">
+     <property name="geometry">
+      <rect>
+       <x>253</x>
+       <y>93</y>
+       <width>62</width>
+       <height>15</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Average:</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="frameNumber_label">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>90</y>
+       <width>62</width>
+       <height>15</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>120</y>
-      <width>391</width>
+      <x>3</x>
+      <y>210</y>
+      <width>381</width>
       <height>201</height>
      </rect>
     </property>
@@ -206,7 +248,7 @@
      <property name="geometry">
       <rect>
        <x>260</x>
-       <y>120</y>
+       <y>90</y>
        <width>121</width>
        <height>22</height>
       </rect>
@@ -219,7 +261,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>170</y>
+       <y>150</y>
        <width>371</width>
        <height>23</height>
       </rect>
@@ -232,7 +274,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>150</y>
+       <y>130</y>
        <width>101</width>
        <height>17</height>
       </rect>
@@ -248,8 +290,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>390</width>
-     <height>25</height>
+     <width>386</width>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
