--- a/MAIN2/MainWindow.ui
+++ b/MAIN2/MainWindow.ui
@@ -38,16 +38,58 @@
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionLoad_File"/>
+    <addaction name="actionLoad_Directory"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
      <string>Edit</string>
     </property>
+    <addaction name="actionPlot"/>
+    <addaction name="actionAnimation"/>
+   </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="action2_Window_Grid"/>
+    <addaction name="action4_Windows_Grid"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
+   <addaction name="menuView"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionLoad_File">
+   <property name="text">
+    <string>Load File</string>
+   </property>
+  </action>
+  <action name="actionLoad_Directory">
+   <property name="text">
+    <string>Load Directory</string>
+   </property>
+  </action>
+  <action name="action2_Window_Grid">
+   <property name="text">
+    <string>2 Windows Grid</string>
+   </property>
+  </action>
+  <action name="action4_Windows_Grid">
+   <property name="text">
+    <string>4 Windows Grid</string>
+   </property>
+  </action>
+  <action name="actionPlot">
+   <property name="text">
+    <string>Plot</string>
+   </property>
+  </action>
+  <action name="actionAnimation">
+   <property name="text">
+    <string>Animation</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
