--- a/MAIN2/MainWindow.ui
+++ b/MAIN2/MainWindow.ui
@@ -52,7 +52,8 @@
     <property name="title">
      <string>View</string>
     </property>
-    <addaction name="action2_Window_Grid"/>
+    <addaction name="action1_Window_Grid"/>
+    <addaction name="action2_Windows_Grid"/>
     <addaction name="action4_Windows_Grid"/>
    </widget>
    <addaction name="menuFile"/>
@@ -70,14 +71,14 @@
     <string>Load Directory</string>
    </property>
   </action>
-  <action name="action2_Window_Grid">
+  <action name="action1_Window_Grid">
    <property name="text">
-    <string>2 Windows Grid</string>
+    <string>Window Grid</string>
    </property>
   </action>
-  <action name="action4_Windows_Grid">
+  <action name="action2_Windows_Grid">
    <property name="text">
-    <string>4 Windows Grid</string>
+    <string>2 Windows Grid</string>
    </property>
   </action>
   <action name="actionPlot">
@@ -88,6 +89,11 @@
   <action name="actionAnimation">
    <property name="text">
     <string>Animation</string>
+   </property>
+  </action>
+  <action name="action4_Windows_Grid">
+   <property name="text">
+    <string>4 Windows Grid</string>
    </property>
   </action>
  </widget>
